--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
         <button onclick="closeModal()">Tutup</button>
       </div>
     </div>
-    
-    <div id="winPopup" class="win-popup" style="display: none">
-      <div class="win-box">
+
+    <div id="winPopup" class="win-popup">
+      <div class="burst">
         <h1>🎉 SELAMAT! 🎉</h1>
-        <h2>ANDA MENANG</h2>
-        <div class="win-amount">Rp 1.000.000.000</div>
+        <h2>Anda Menang</h2>
+        <div class="amount">1 Milyar</div>
         <button onclick="restartGame()">Main Lagi</button>
       </div>
     </div>
