--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
     </div>
 
     <div id="winPopup" class="win-popup">
+      <div class="money-rain"></div>
+
       <div class="burst">
         <h1>🎉 SELAMAT! 🎉</h1>
-        <h2>Anda Menang</h2>
+        <h2>Selamat, Anda Menang</h2>
         <div class="amount">1 Milyar</div>
         <button onclick="restartGame()">Main Lagi</button>
       </div>
